// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with accessibility props 1`] = `
<RCTView
  accessibilityLabel="Keyboard avoiding container"
  accessible={true}
  className="flex-1 px-[16px]"
  testID="keyboard-avoiding-view"
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with all props combined 1`] = `
<RNCSafeAreaView
  className="flex-1 px-0"
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
>
  <RCTView
    accessibilityLabel="Custom keyboard avoiding view"
    accessible={true}
    behavior="padding"
    className="flex-grow px-[24px] flex-grow flex-none custom-class"
    contentContainerStyle={
      {
        "padding": 16,
      }
    }
    enabled={true}
    style={
      {
        "marginBottom": 16,
      }
    }
    testID="keyboard-avoiding-view"
  >
    Content
  </RCTView>
</RNCSafeAreaView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with basic props 1`] = `
<RCTView
  className="flex-1 px-[16px]"
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with behavior prop 1`] = `
<RCTView
  behavior="padding"
  className="flex-1 px-[16px]"
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with contentContainerStyle prop 1`] = `
<RCTView
  className="flex-1 px-[16px]"
  contentContainerStyle={
    {
      "padding": 16,
    }
  }
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with custom className 1`] = `
<RCTView
  className="flex-1 px-[16px] custom-class"
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with custom style 1`] = `
<RCTView
  className="flex-1 px-[16px]"
  style={
    {
      "marginBottom": 8,
    }
  }
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with edges prop 1`] = `
<RNCSafeAreaView
  className="flex-1 px-0"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
>
  <RCTView
    className="flex-1 px-[16px]"
  >
    Content
  </RCTView>
</RNCSafeAreaView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with enabled prop 1`] = `
<RCTView
  className="flex-1 px-[16px]"
  enabled={false}
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with fill prop 1`] = `
<RCTView
  className="flex-1 px-[16px]"
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with grow prop 1`] = `
<RCTView
  className="flex-grow px-[16px] flex-grow flex-none"
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with hasSafeArea prop 1`] = `
<RNCSafeAreaView
  className="flex-1 px-0"
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
>
  <RCTView
    className="flex-1 px-[16px]"
  >
    Content
  </RCTView>
</RNCSafeAreaView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with keyboardVerticalOffset prop 1`] = `
<RCTView
  className="flex-1 px-[16px]"
>
  Content
</RCTView>
`;

exports[`WrapperKeyboardAvoidingView Snapshots should match snapshot with px prop 1`] = `
<RCTView
  className="flex-1 px-[16px]"
>
  Content
</RCTView>
`;
